--- a/client/package.json
+++ b/client/package.json
@@ -9,15 +9,19 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@vitejs/plugin-react": "^4.2.1",
     "vite": "^6.3.5"
   },
   "dependencies": {
     "@headlessui/react": "^2.2.2",
     "@heroicons/react": "^2.2.0",
+    "@tailwindcss/postcss": "^4.1.5",
     "autoprefixer": "^10.4.21",
     "axios": "^1.9.0",
     "postcss": "^8.5.3",
-    "react-router-dom": "^7.6.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.3",
     "recharts": "^2.15.3",
     "tailwindcss": "^4.1.5"
   }
